fixed centering of header and nav bar on mobile

--- a/Lofi-Aperitifs Website/homepage.css
+++ b/Lofi-Aperitifs Website/homepage.css
@@ -70,6 +70,10 @@ lowerNav li {
         display: none;
     }
 
+    #navLogo {
+        margin: 0 auto;
+    }
+
     upperNav ul {
         margin: 0;
     }
@@ -86,7 +90,7 @@ lowerNav li {
 
     lowerNav li {
         text-align: center;
-        padding: 0 1rem;
+        padding: 0 2rem 0 1rem;
         margin-left: 0;
     }
 
